logs/ramp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ramp'...
Compiling './lib/python3.5/site-packages/ramp/builders.py'...
***   File "./lib/python3.5/site-packages/ramp/builders.py", line 22
    print "\n\nWARNING: Feature '%s' has constant column. \n\n" % feature.unique_name
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ramp/estimators'...
Listing './lib/python3.5/site-packages/ramp/features'...
Compiling './lib/python3.5/site-packages/ramp/features/base.py'...
***   File "./lib/python3.5/site-packages/ramp/features/base.py", line 199
    print "Prepping '%s'" % self.unique_name
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ramp/features/text.py'...
***   File "./lib/python3.5/site-packages/ramp/features/text.py", line 121
    print "building topic model"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ramp/models.py'...
***   File "./lib/python3.5/site-packages/ramp/models.py", line 39
    print "loading stored model..."
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ramp/reporters.py'...
***   File "./lib/python3.5/site-packages/ramp/reporters.py", line 29
    print cm
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ramp/selectors.py'...
***   File "./lib/python3.5/site-packages/ramp/selectors.py", line 58
    print '%d\t%0.4f\t%s'%(i,imp, f)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ramp/store.py'...
***   File "./lib/python3.5/site-packages/ramp/store.py", line 59
    print "Retrieving '%s' from local" % key
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ramp-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
